--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mdx-js/mdx": "v1",
     "@mdx-js/react": "v1",
+    "daisyui": "^2.17.0",
     "gatsby": "^4.17.1",
     "gatsby-plugin-google-analytics": "^4.17.0",
     "gatsby-plugin-image": "^2.17.0",
@@ -32,5 +33,9 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "tailwindcss": "^3.1.4"
   }
 }
