--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-player": "^2.10.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
