--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fluentui/theme": "^2.6.6",
     "@mdx-js/mdx": "v1",
     "@mdx-js/react": "v1",
     "daisyui": "^2.17.0",
