--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
-    "react-player": "^2.10.1"
+    "react-player": "^2.10.1",
+    "react-spring": "^9.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
