--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "v1",
     "daisyui": "^2.17.0",
     "gatsby": "^4.17.1",
+    "gatsby-cli": "^5.1.0",
     "gatsby-plugin-google-analytics": "^4.17.0",
     "gatsby-plugin-image": "^2.17.0",
     "gatsby-plugin-manifest": "^4.17.0",
